--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
     working_dir: /usr/src/app
     volumes:
       - ./worker:/usr/src/app
+      - /usr/src/app/node_modules
     networks:
       - app-network
     environment:
@@ -60,6 +61,7 @@ services:
       - '3000:3000'
     volumes:
       - ./rest:/usr/src/app
+      - /usr/src/app/node_modules
     networks:
       - app-network
     environment:
